--- a/index.html
+++ b/index.html
@@ -7,45 +7,43 @@
 <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 <body>
-<header>
-<h1>Home</h1>
-<nav>
-<button>
-<p>Hero</p>
-</button>
-<button>
-<p>education</p>
-</button>
-<button>
-<p>Hobbies & Skill</p>
-</button>
-</nav>
-</header>
-
-<section class="hero">
-<div class="left">
-<h3>Jomari Christian U. Maderal</h3>
-<h1>BS in  <span> Information Technology </span></h1>
-<h2>Objective</h2>
-<p>For me to attain the job as a Web designer I will showcase my current skills in C++
-programming, IPv4, IPv6, and Photoshop. I am willing to learn new skills using other
-Software Programs to enhance my talent. Working alone and as a group wouldn’t be a
-problem so that I can help the company's growth.</p>
-<section id="education" >
-    <h1> Education </h1>
-    <br>
-    <h2> School: </h2>
-    <h3>  - Finished elementary </h3>
-    <h4>  - Finished Highschool </h4>
-    <h5>  - Finished Senior Highschool </h5>
-
-</section>
-
-</div>
-<div class="right">
-<img src="./assets/img/PIC RESUME.jpg" alt="JOSH"
-width="700">
-</div>
-</section>
+    <nav>
+        <div class="nav_content">
+            <div class="logo"><a href="#">Jomari Maderal</a></div>
+            <label for="check" class="checkbox">
+                <i class="ri-menu-line"></i>
+            </label>
+            <input type="checkbox" name="check" id="check">
+            <ul>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">About</a></li>
+                <li><a href="#">Resume</a></li>
+                <li><a href="#">Protfolio</a></li>
+                <li><a href="#">Contacts</a></li>
+            </ul>
+        </div>
+    </nav>
+    <section class="section">
+        <div class="section__container">
+            <div class="content">
+                <p class="subtitle">HELLO</p>
+                <h1 class="title">
+                    I'm <span>Jomari Maderal<br>a</span> 1st Year BS IT in FEU Tech
+                </h1>
+                <p class="description">
+                    For me to attain the job as a Web designer I can showcase my current skills in C++ programming, IPv4, IPv6, and Photoshop. 
+                    I am willing to learn new skills using other Software Programs to enhance my skills and working alone and as a group wouldn’t be a problem 
+                    so that I can help the company's growth. 
+                </p>
+                <div class="action__btns">
+                    <button class="hire__me">Hire Me</button>
+                    <button class="portfolio">Portfolio</button>
+                </div>
+            </div>
+            <div class="image">
+                <img src="assets/img/PIC RESUME.jpg" alt="profile">
+            </div>
+        </div>
+    </section>
 </body>
 </html>
