--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <div class="content">
                 <p class="subtitle">HELLO</p>
                 <h1 class="title">
-                    I'm <span>Jomari Maderal<br>a</span> 1st Year BS IT in FEU Tech
+                    I'm <span>Jomari Maderal<br>a</span> 1st Year BS IT in FEU Institute of Technology
                 </h1>
                 <p class="description">
                     For me to attain the job as a Web designer I can showcase my current skills in C++ programming, IPv4, IPv6, and Photoshop. 
