--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Seatwork 2</title>
+<link href="https://cdn.jsdelivr.net/npm/remixicon@4.2.0/fonts/remixicon.css" rel="stylesheet" />
 <link rel="stylesheet" href="./assets/css/style.css">
+<title>Seatwork 2</title>
 </head>
 <body>
     <nav>
