--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
             <div class="logo"><a href="#">Jomari Maderal</a></div>
             <label for="check" class="checkbox">
                 <i class="ri-menu-line"></i>
-            </label>
-            <input type="checkbox" name="check" id="check">
+              </label>
+              <input type="checkbox" name="check" id="check" />
             <ul>
-                <li><a href="#">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="#">About</a></li>
                 <li><a href="#">Resume</a></li>
-                <li><a href="#">Protfolio</a></li>
-                <li><a href="#">Contacts</a></li>
+                <li><a href="#">Portfolio</a></li>
+                <li><a href="contact.html">Contact</a></li>
             </ul>
         </div>
     </nav>
@@ -38,7 +38,7 @@
                 </p>
                 <div class="action__btns">
                     <button class="hire__me">Hire Me</button>
-                    <button class="portfolio">Portfolio</button>
+                    <button class="socials">Socials</button>
                 </div>
             </div>
             <div class="image">
@@ -46,5 +46,6 @@
             </div>
         </div>
     </section>
+
 </body>
 </html>
