--- a/pages/Contact/contact.html
+++ b/pages/Contact/contact.html
@@ -10,17 +10,17 @@
 <body>
     <nav>
         <div class="nav_content">
-            <div class="logo"><a href="#">Jomari Maderal</a></div>
+            <div class="logo"><a href="/Users/Jomari/OneDrive/Desktop/WEB%20DESIGN/WD-Seatwork-2-TX03/index.html">Mid Term Résumé</a></div>
             <label for="check" class="checkbox">
                 <i class="ri-menu-line"></i>
               </label>
               <input type="checkbox" name="check" id="check" />
             <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">About</a></li>
+                <li><a href="/Users/Jomari/OneDrive/Desktop/WEB%20DESIGN/WD-Seatwork-2-TX03/index.html">Home</a></li>
+                <li><a href="/Users/Jomari/OneDrive/Desktop/WEB%20DESIGN/WD-Seatwork-2-TX03/pages/page2/About.html">About</a></li>
                 <li><a href="#">Resume</a></li>
                 <li><a href="#">Portfolio</a></li>
-                <li><a href="#">Contact</a></li>
+                <li><a href="/Users/Jomari/OneDrive/Desktop/WEB%20DESIGN/WD-Seatwork-2-TX03/pages/Contact/contact.html">Contact</a></li>
             </ul>
         </div>
     </nav>
