--- a/pages/page2/About.html
+++ b/pages/page2/About.html
@@ -5,7 +5,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link href="https://cdn.jsdelivr.net/npm/remixicon@4.2.0/fonts/remixicon.css" rel="stylesheet" />
 <link rel="stylesheet" href="./assets/css/style.css">
-<title>Seatwork 2</title>
+<title>About me</title>
 </head>
 <body>
     <nav>
@@ -17,7 +17,7 @@
               <input type="checkbox" name="check" id="check" />
             <ul>
                 <li><a href="/Users/Jomari/OneDrive/Desktop/WEB%20DESIGN/WD-Seatwork-2-TX03/index.html">Home</a></li>
-                <li><a href="/Users/Jomari/OneDrive/Desktop/WEB%20DESIGN/WD-Seatwork-2-TX03/pages/page2/About.html">About</a></li>
+                <li><a href="./pages/page2/About.html">About</a></li>
                 <li><a href="#">Resume</a></li>
                 <li><a href="#">Portfolio</a></li>
                 <li><a href="/Users/Jomari/OneDrive/Desktop/WEB%20DESIGN/WD-Seatwork-2-TX03/pages/Contact/contact.html">Contact</a></li>
@@ -27,22 +27,16 @@
     <section class="section">
         <div class="section__container">
             <div class="content">
-                <p class="subtitle">HELLO</p>
+                <p class="subtitle">ABOUT ME</p>
                 <h1 class="title">
-                    I'm <span>Jomari Maderal<br>a</span> 1st Year BS IT in FEU Institute of Technology
+                    <span>CRISTANTO GUYSAYKO MEMORIAL ELEMENTARY SCHOOL</span>
                 </h1>
                 <p class="description">
-                    For me to attain the job as a Web designer I can showcase my current skills in C++ programming, IPv4, IPv6, and Photoshop. 
-                    I am willing to learn new skills using other Software Programs to enhance my skills and working alone and as a group wouldn’t be a problem 
-                    so that I can help the company's growth. 
+                    I finish my elementary in CGMES in Nagcarlan, Laguna
                 </p>
-                <div class="action__btns">
-                    <button class="hire__me">Hire Me</button>
-                    <button class="socials">Socials</button>
-                </div>
             </div>
             <div class="image">
-                <img src="assets/img/PIC RESUME.jpg" alt="profile">
+                <img src="assets/img/CGMES.jpg" alt="CGMES">
             </div>
         </div>
     </section>
