--- a/pages/Certification/cert.html
+++ b/pages/Certification/cert.html
@@ -5,7 +5,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link href="https://cdn.jsdelivr.net/npm/remixicon@4.2.0/fonts/remixicon.css" rel="stylesheet" />
 <link rel="stylesheet" href="./assets/css/style.css">
-<title>About me</title>
+<title>Certification</title>
 </head>
 <body>
     <nav>
@@ -18,28 +18,16 @@
             <ul>
                 <li><a href="/Users/Jomari/OneDrive/Desktop/WEB%20DESIGN/WD-Seatwork-2-TX03/index.html">Home</a></li>
                 <li><a href="./pages/page2/About.html">About</a></li>
-                <li><a href="#">Resume</a></li>
-                <li><a href="#">Portfolio</a></li>
+                <li><a href="#">Hobbies</a></li>
+                <li><a href="#">Certification</a></li>
                 <li><a href="/Users/Jomari/OneDrive/Desktop/WEB%20DESIGN/WD-Seatwork-2-TX03/pages/Contact/contact.html">Contact</a></li>
             </ul>
         </div>
     </nav>
-    <section class="section">
-        <div class="section__container">
-            <div class="content">
-                <p class="subtitle">ABOUT ME</p>
-                <h1 class="title">
-                    <span>CRISTANTO GUYSAYKO MEMORIAL ELEMENTARY SCHOOL</span>
-                </h1>
-                <p class="description">
-                    I finish my elementary in CGMES in Nagcarlan, Laguna
-                </p>
-            </div>
-            <div class="image">
-                <img src="assets/img/CGMES.jpg" alt="CGMES">
-            </div>
-        </div>
+    <section id="Cert">
+    <a href="#Cert" class="arrow"><img src="" alt=""></a>
+    <p class="heading-p">My</p>
+    <h1 class="heading">Certifications</h1>
     </section>
-
 </body>
 </html>
