--- a/pages/Contact/contact.html
+++ b/pages/Contact/contact.html
@@ -17,9 +17,9 @@
               <input type="checkbox" name="check" id="check" />
             <ul>
                 <li><a href="/Users/Jomari/OneDrive/Desktop/WEB%20DESIGN/WD-Seatwork-2-TX03/index.html">Home</a></li>
-                <li><a href="/Users/Jomari/OneDrive/Desktop/WEB%20DESIGN/WD-Seatwork-2-TX03/pages/page2/About.html">About</a></li>
-                <li><a href="#">Resume</a></li>
-                <li><a href="#">Portfolio</a></li>
+                <li><a href="/Users/Jomari/OneDrive/Desktop/WEB%20DESIGN/WD-Seatwork-2-TX03/pages/About me/About.html">About</a></li>
+                <li><a href="#">Hobbies</a></li>
+                <li><a href="#">Certification</a></li>
                 <li><a href="/Users/Jomari/OneDrive/Desktop/WEB%20DESIGN/WD-Seatwork-2-TX03/pages/Contact/contact.html">Contact</a></li>
             </ul>
         </div>
@@ -49,9 +49,9 @@
     <footer class="footer">
 
         <div class="social">
-            <a href="#"><i class="ri-facebook-circle-fill"></i></a>
-            <a href="#"><i class="ri-instagram-fill"></i></a>
-            <a href="#"><i class="ri-github-fill"></i></a>
+            <a href="https://www.facebook.com/jomari.maderal/"><i class="ri-facebook-circle-fill"></i></a>
+            <a href="https://www.instagram.com/jomarimaderal/"><i class="ri-instagram-fill"></i></a>
+            <a href="https://github.com/Smojii"><i class="ri-github-fill"></i></a>
         </div>
 
         <ul class="list">
