--- a/pages/About me/About.html
+++ b/pages/About me/About.html
@@ -17,9 +17,9 @@
               <input type="checkbox" name="check" id="check" />
             <ul>
                 <li><a href="/Users/Jomari/OneDrive/Desktop/WEB%20DESIGN/WD-Seatwork-2-TX03/index.html">Home</a></li>
-                <li><a href="./pages/page2/About.html">About</a></li>
-                <li><a href="#">Hobbies</a></li>
-                <li><a href="#">Certification</a></li>
+                <li><a href="/Users/Jomari/OneDrive/Desktop/WEB%20DESIGN/WD-Seatwork-2-TX03/pages/About me/About.html">About</a></li>
+                <li><a href="/Users/Jomari/OneDrive/Desktop/WEB%20DESIGN/WD-Seatwork-2-TX03/pages/Hobby/hobby.html">Hobbies</a></li>
+                <li><a href="/Users/Jomari/OneDrive/Desktop/WEB%20DESIGN/WD-Seatwork-2-TX03/pages/Certification/cert.html">Certification</a></li>
                 <li><a href="/Users/Jomari/OneDrive/Desktop/WEB%20DESIGN/WD-Seatwork-2-TX03/pages/Contact/contact.html">Contact</a></li>
             </ul>
         </div>
@@ -43,9 +43,9 @@
     <section class="school2">
         <div class="school2__container">
             <div class="content">
-                <h1 class="title2">
+                <h2 class="title2">
                     <span>CANOSSA COLLEGE</span>
-                </h1>
+                </h2>
                 <p class="description">
                     I finish my Highschool and Senior Highschool in Canosssa College in San Pablo, Laguna
                 </p>
@@ -58,9 +58,9 @@
     <section class="school3">
         <div class="school3__container">
             <div class="content">
-                <h1 class="title3">
+                <h3 class="title3">
                     <span>UNIVERSITY OF SANTO THOMAS</span>
-                </h1>
+                </h3>
                 <p class="description">
                     I started my College in UST studying the course of BS Mechanical Engineering in Sampaloc, Manila
                 </p>
@@ -73,9 +73,9 @@
     <section class="school4">
         <div class="school4__container">
             <div class="content">
-                <h1 class="title4">
+                <h4 class="title4">
                     <span>FEU Institute of Technology</span>
-                </h1>
+                </h4>
                 <p class="description">
                     I shift course t BS IT Web and Moblie Application here in FEU TECH in Sampaloc, Manila
                 </p>
