--- a/pages/Certification/cert.html
+++ b/pages/Certification/cert.html
@@ -17,17 +17,63 @@
               <input type="checkbox" name="check" id="check" />
             <ul>
                 <li><a href="/Users/Jomari/OneDrive/Desktop/WEB%20DESIGN/WD-Seatwork-2-TX03/index.html">Home</a></li>
-                <li><a href="./pages/page2/About.html">About</a></li>
-                <li><a href="#">Hobbies</a></li>
-                <li><a href="#">Certification</a></li>
+                <li><a href="/Users/Jomari/OneDrive/Desktop/WEB%20DESIGN/WD-Seatwork-2-TX03/pages/About me/About.html">About</a></li>
+                <li><a href="/Users/Jomari/OneDrive/Desktop/WEB%20DESIGN/WD-Seatwork-2-TX03/pages/Hobby/hobby.html">Hobbies</a></li>
+                <li><a href="/Users/Jomari/OneDrive/Desktop/WEB%20DESIGN/WD-Seatwork-2-TX03/pages/Certification/cert.html">Certification</a></li>
                 <li><a href="/Users/Jomari/OneDrive/Desktop/WEB%20DESIGN/WD-Seatwork-2-TX03/pages/Contact/contact.html">Contact</a></li>
             </ul>
         </div>
     </nav>
+    <section id="Experience">
+        <p class="heading-p">My</p>
+        <h1 class="heading">Experience</h1>
+        <div class="container container-experience">
+            <div class="experience-box">
+                <h2>Know How to Use</h2>
+                <div class="experience">
+                    <div class="ex-div">
+                        <i class="ri-verified-badge-fill"></i>
+                    </div>
+                    <h4>Dev C++</h4>
+                    <p>Experienced</p>
+                </div>
+                <div class="ex-div">
+                    <i class="ri-verified-badge-fill"></i>
+                </div>
+                <h4>Linux Essentials</h4>
+                <p>Intermediate</p>
+                <div class="ex-div">
+                    <i class="ri-verified-badge-fill"></i>
+                </div>
+                <h4>HTML</h4>
+                <p>Beginner</p>
+                <div class="ex-div">
+                    <i class="ri-verified-badge-fill"></i>
+                </div>
+                <h4>CSS</h4>
+                <p>Beginner</p>
+            </div>
+            </div>
+        </div>
+    </section>
     <section id="Cert">
-    <a href="#Cert" class="arrow"><img src="" alt=""></a>
-    <p class="heading-p">My</p>
-    <h1 class="heading">Certifications</h1>
+    <h1 class="heading">My Certifications</h1>
+    <div class="conatiner project-container">
+        <div class="project">
+            <img src="./assets/img/JomariMaderal-SY2023-241TIT001-certificate.jpg" alt="cert1">
+            <h3>Certicate in Introduction to Networking</h3>
+            <div class="action__btns">
+                <button class="see__cert2">See Certification</button>
+            </div>
+        </div>
+        <div class="project">
+            <img src="./assets/img/JomariMaderal-SY2023-242TIT003-certificate.jpg" alt="cert1">
+            <h3>Certicate in NDG Linux Essentials</h3>
+            <div class="action__btns">
+                <button class="see__cert2">See Certification</button>
+            </div>
+        </div>
+    </div>
     </section>
 </body>
 </html>
