--- a/pages/Contact/contact.html
+++ b/pages/Contact/contact.html
@@ -18,8 +18,8 @@
             <ul>
                 <li><a href="/Users/Jomari/OneDrive/Desktop/WEB%20DESIGN/WD-Seatwork-2-TX03/index.html">Home</a></li>
                 <li><a href="/Users/Jomari/OneDrive/Desktop/WEB%20DESIGN/WD-Seatwork-2-TX03/pages/About me/About.html">About</a></li>
-                <li><a href="#">Hobbies</a></li>
-                <li><a href="#">Certification</a></li>
+                <li><a href="/Users/Jomari/OneDrive/Desktop/WEB%20DESIGN/WD-Seatwork-2-TX03/pages/Hobby/hobby.html">Hobbies</a></li>
+                <li><a href="/Users/Jomari/OneDrive/Desktop/WEB%20DESIGN/WD-Seatwork-2-TX03/pages/Certification/cert.html">Certification</a></li>
                 <li><a href="/Users/Jomari/OneDrive/Desktop/WEB%20DESIGN/WD-Seatwork-2-TX03/pages/Contact/contact.html">Contact</a></li>
             </ul>
         </div>
