--- a/pages/Hobby/hobby.html
+++ b/pages/Hobby/hobby.html
@@ -5,7 +5,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link href="https://cdn.jsdelivr.net/npm/remixicon@4.2.0/fonts/remixicon.css" rel="stylesheet" />
 <link rel="stylesheet" href="./assets/css/style.css">
-<title>Seatwork 2</title>
+<title>Hobby</title>
 </head>
 <body>
     <nav>
@@ -24,27 +24,29 @@
             </ul>
         </div>
     </nav>
-    <section class="section">
-        <div class="section__container">
-            <div class="content">
-                <p class="subtitle">HELLO</p>
-                <h1 class="title">
-                    I'm <span>Jomari Maderal<br>a</span> 1st Year BS IT in FEU Institute of Technology
-                </h1>
-                <p class="description">
-                    For me to attain the job as a Web designer I can showcase my current skills in C++ programming, IPv4, IPv6, and Photoshop. 
-                    I am willing to learn new skills using other Software Programs to enhance my skills and working alone and as a group wouldn’t be a problem 
-                    so that I can help the company's growth. 
-                </p>
-                <div class="action__btns">
-                    <button class="hire__me">Hire Me</button>
+  
+    <div class="container">
+        <div class="row">
+            <div class="col">
+                <h1>My Hobbies</h1>
+                <p>Here are the list of my hobbies, it is what I mostly do to bond with my friends, families and also myself.</p>
+            </div>
+            <div class="col">
+                <div class="card card1">
+                    <h5>League of Legends</h5>
+                </div>
+                <div class="card card2">
+                    <h5>Billiards</h5>
+                </div>
+                <div class="card card3">
+                    <h5>Playing Guitar</h5>
+                </div>
+                <div class="card card4">
+                    <h5>Basketball</h5>
                 </div>
             </div>
-            <div class="image">
-                <img src="assets/img/PIC RESUME.jpg" alt="profile">
-            </div>
-        </div>
-    </section>
+          </div>
+    </div>
 
 </body>
 </html>
