--- a/pages/About me/index.html
+++ b/pages/About me/index.html
@@ -17,10 +17,10 @@
               <input type="checkbox" name="check" id="check" />
             <ul>
                 <li><a href="/Users/Jomari/OneDrive/Desktop/WEB%20DESIGN/WD-Seatwork-2-TX03/index.html">Home</a></li>
-                <li><a href="/Users/Jomari/OneDrive/Desktop/WEB%20DESIGN/WD-Seatwork-2-TX03/pages/About me/About.html">About</a></li>
-                <li><a href="/Users/Jomari/OneDrive/Desktop/WEB%20DESIGN/WD-Seatwork-2-TX03/pages/Hobby/hobby.html">Hobbies</a></li>
-                <li><a href="/Users/Jomari/OneDrive/Desktop/WEB%20DESIGN/WD-Seatwork-2-TX03/pages/Certification/cert.html">Certification</a></li>
-                <li><a href="/Users/Jomari/OneDrive/Desktop/WEB%20DESIGN/WD-Seatwork-2-TX03/pages/Contact/contact.html">Contact</a></li>
+                <li><a href="/Users/Jomari/OneDrive/Desktop/WEB%20DESIGN/WD-Seatwork-2-TX03/pages/About me/index.html">About</a></li>
+                <li><a href="/Users/Jomari/OneDrive/Desktop/WEB%20DESIGN/WD-Seatwork-2-TX03/pages/Hobby/index.html">Hobbies</a></li>
+                <li><a href="/Users/Jomari/OneDrive/Desktop/WEB%20DESIGN/WD-Seatwork-2-TX03/pages/Certification/index.html">Certification</a></li>
+                <li><a href="/Users/Jomari/OneDrive/Desktop/WEB%20DESIGN/WD-Seatwork-2-TX03/pages/Contact/index.html">Contact</a></li>
             </ul>
         </div>
     </nav>
