feat(pages): fix link

--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
               </label>
               <input type="checkbox" name="check" id="check" />
             <ul>
-                <li><a href="/Users/Jomari/OneDrive/Desktop/WEB%20DESIGN/WD-Seatwork-2-TX03/index.html">Home</a></li>
-                <li><a href="/Users/Jomari/OneDrive/Desktop/WEB%20DESIGN/WD-Seatwork-2-TX03/pages/About me/index.html">About</a></li>
-                <li><a href="/Users/Jomari/OneDrive/Desktop/WEB%20DESIGN/WD-Seatwork-2-TX03/pages/Hobby/index.html">Hobbies</a></li>
-                <li><a href="/Users/Jomari/OneDrive/Desktop/WEB%20DESIGN/WD-Seatwork-2-TX03/pages/Certification/index.html">Certification</a></li>
-                <li><a href="/Users/Jomari/OneDrive/Desktop/WEB%20DESIGN/WD-Seatwork-2-TX03/pages/Contact/index.html">Contact</a></li>
+                <li><a href="./index.html">Home</a></li>
+                <li><a href="./pages/About me/index.html">About</a></li>
+                <li><a href="./pages/Hobby/index.html">Hobbies</a></li>
+                <li><a href="./pages/Certification/index.html">Certification</a></li>
+                <li><a href="./pages/Contact/index.html">Contact</a></li>
             </ul>
         </div>
     </nav>
