--- a/pages/About me/index.html
+++ b/pages/About me/index.html
@@ -16,7 +16,7 @@
               </label>
               <input type="checkbox" name="check" id="check" />
             <ul>
-                <li><a href="./index.html">Home</a></li>
+                <li><a href="../../index.html">Home</a></li>
                 <li><a href="../About me/index.html">About</a></li>
                 <li><a href="../Hobby/index.html">Hobbies</a></li>
                 <li><a href="../Certification/index.html">Certification</a></li>
