feature(page) fix link

--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
               <input type="checkbox" name="check" id="check" />
             <ul>
                 <li><a href="./index.html">Home</a></li>
-                <li><a href="../About me/index.html">About</a></li>
-                <li><a href="../Hobby/index.html">Hobbies</a></li>
-                <li><a href="../Certification/index.html">Certification</a></li>
-                <li><a href="../Contact/index.html">Contact</a></li>
+                <li><a href="./pages/About me/index.html">About</a></li>
+                <li><a href="./pages/Hobby/index.html">Hobbies</a></li>
+                <li><a href="./pages/Certification/index.html">Certification</a></li>
+                <li><a href="./pages/Contact/index.html">Contact</a></li>
             </ul>
         </div>
     </nav>
