feat(navbar&home page): fix linking and project button added

--- a/index.html
+++ b/index.html
@@ -34,10 +34,11 @@
                 <p class="description">
                     For me to attain the job as a Web designer I can showcase my current skills in C++ programming, IPv4, IPv6, and Photoshop. 
                     I am willing to learn new skills using other Software Programs to enhance my skills and working alone and as a group wouldn’t be a problem 
-                    so that I can help the company's growth. 
+                    so that I can help the company's growth.
                 </p>
                 <div class="action__btns">
                     <button class="hire__me">Hire Me</button>
+                    <a href="https://smojii.github.io/WD-Finals/#projects"><button class="hire__me">Back to Project Page</button></a>
                 </div>
             </div>
             <div class="image">
