feat(home page): new project page link

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 </p>
                 <div class="action__btns">
                     <button class="hire__me">Hire Me</button>
-                    <a href="https://smojii.github.io/WD-Finals/#projects"><button class="hire__me">Back to Project Page</button></a>
+                    <a href="https://smojii.github.io/WD-Finals/pages/projects/index.html"><button class="hire__me">Back to Project Page</button></a>
                 </div>
             </div>
             <div class="image">
